--- a/app-vite/tsconfig.json
+++ b/app-vite/tsconfig.json
@@ -13,6 +13,9 @@
       "esnext",
       "dom"
     ],
+    "typeRoots": [
+      "./node_modules/@types/"
+    ],
     "types": [
       "vite/client"
     ]
