--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-vue-vite",
+  "name": "dbs",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -9,8 +9,10 @@
     "serve-qiankun": "npm run build && npm run start-qiankun"
   },
   "dependencies": {
+    "@types/node": "^20.14.10",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.8"
+    "vue-router": "^4.0.8",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@rollup/plugin-html": "^0.2.3",
