--- a/app-vue-history/package.json
+++ b/app-vue-history/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-vue-history",
+  "name": "project1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,8 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
