--- a/main/package.json
+++ b/main/package.json
@@ -9,7 +9,19 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "custom-event-polyfill": "^1.0.7",
+    "element-ui": "^2.15.14",
+    "axios": "^0.21.1",
     "fetch-polyfill": "^0.8.2",
+    "vue-i18n": "^8.14.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^0.23.1",
+    "style-resources-loader": "^1.5.0",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^1.1.2",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5",
+    "vue-loader": "^13.7.3",
+    "vue-style-loader": "^3.0.1",
     "qiankun": "^2.3.2",
     "vue": "^2.6.12",
     "vue-router": "^3.1.5",
